# sentinum-canvas-plugins

./: .gitignore
ccm-auto-billing/: pyproject.toml  test_live_call.py
ccm-auto-billing/ccm_auto_billing/: CANVAS_MANIFEST.json  README.md
ccm-auto-billing/ccm_auto_billing/protocols/: claim_router.py  ingest_handler.py  note_state_linker.py
ccm-auto-billing/scripts/: create_test_encounter.py
ccm-auto-billing/tests/protocols/: test_claim_router.py  test_ingest_handler.py  test_note_state_linker.py
ccm-call-ingestor/: .gitignore  pyproject.toml  test_live_call.py
ccm-call-ingestor/ccm_call_ingestor/: CANVAS_MANIFEST.json  README.md
ccm-call-ingestor/ccm_call_ingestor/handlers/: ccm_ingestor.py
ccm-call-ingestor/tests/: test_ccm_ingestor.py
createccmencounter/: pyproject.toml
createccmencounter/createccmencounter/: CANVAS_MANIFEST.json  README.md
createccmencounter/tests/: test_event_handlers.py
livekit-scribe/: README.md
livekit-scribe/agent-server/: .env.example  docker-compose.yml  livekit.yaml
livekit-scribe/agent-server/agent/: Dockerfile  canvas_client.py  main.py  pipeline.py  requirements.txt  schemas.py
livekit-scribe/canvas-plugin/: pyproject.toml
livekit-scribe/canvas-plugin/livekit_scribe/: CANVAS_MANIFEST.json  README.md
sentinum-intake/: pyproject.toml
sentinum-intake/sentinum_intake/: CANVAS_MANIFEST.json
sentinum-intake/sentinum_intake/protocols/: appointment_handler.py  intake_api.py  tokens.py
sentinum-intake/sentinum_intake/templates/: intake_form.html
sentinum-intake/tests/protocols/: test_appointment_handler.py  (+2 more)
(+6 files in other folders)
